--- a/Web App/package.json
+++ b/Web App/package.json
@@ -8,6 +8,7 @@
     "express-session": "^1.18.2",
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.3",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10"
   },
   "scripts": {
