--- a/Web App/package.json
+++ b/Web App/package.json
@@ -8,6 +8,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "flatpickr": "^4.6.13",
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.3",
     "multer": "^2.0.2",
